[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Sidebar/Sidebar.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/UI.gd" type="Script" id=2]
[ext_resource path="res://UI/ImageView/ImageView.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Resources/Theme.tres" type="Theme" id=5]
[ext_resource path="res://UI/ProgressBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/ImageView/ViewOptions.tscn" type="PackedScene" id=7]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 11
custom_constants/margin_top = 11
custom_constants/margin_left = 11
custom_constants/margin_bottom = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 11.0
margin_top = 11.0
margin_right = 1909.0
margin_bottom = 1069.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="MarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_bottom = 25.0

[node name="HBoxContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 1898.0
margin_bottom = 1029.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelTool" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 1000.0
rect_min_size = Vector2( 350, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTool"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sidebar" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTool/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 350.0
margin_bottom = 946.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTool/VBoxContainer"]
margin_top = 950.0
margin_right = 350.0
margin_bottom = 1000.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTool/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 30 )
text = "Reset"

[node name="PanelTex" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 1898.0
margin_bottom = 1000.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTex"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 11
custom_constants/margin_top = 11
custom_constants/margin_left = 11
custom_constants/margin_bottom = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImageView" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTex/MarginContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 11.0
margin_right = 1525.0
margin_bottom = 989.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTex/MarginContainer"]
margin_left = 11.0
margin_top = 11.0
margin_right = 1525.0
margin_bottom = 989.0
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="FrameCounter" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTex/MarginContainer/MarginContainer"]
margin_left = 20.0
margin_top = 939.0
margin_right = 1514.0
margin_bottom = 958.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 12
text = "Frame ?/?"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewOptions" parent="MarginContainer/VBoxContainer/HBoxContainer/PanelTex" instance=ExtResource( 7 )]
margin_right = -60.0
margin_bottom = -35.0

[node name="ProgressBar" parent="MarginContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 1033.0
[connection signal="menu_item_clicked" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_menu_item_clicked"]
[connection signal="img_params_changed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelTool/VBoxContainer/Sidebar" to="." method="_on_Sidebar_img_params_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelTool/VBoxContainer/MarginContainer/Reset" to="MarginContainer/VBoxContainer/HBoxContainer/PanelTool/VBoxContainer/Sidebar" method="_on_Reset_pressed"]
[connection signal="FPS_changed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelTex/ViewOptions" to="." method="_on_ViewOptions_FPS_changed"]
[connection signal="pixelmode_changed" from="MarginContainer/VBoxContainer/HBoxContainer/PanelTex/ViewOptions" to="." method="_on_ViewOptions_pixelmode_changed"]
